--- a/quarto/appendix-b.qmd
+++ b/quarto/appendix-b.qmd
@@ -1,944 +1,420 @@
 ---
-title: "Appendix B: Supplementary Analyses"
-subtitle: "Additional Analyses and Figures"
-format:
-  html:
-    toc: true
-  pdf:
-    toc: true
-    number-sections: false
+title: "Appendix B: Extended Data Tables and Figures"
 ---
 
-# Supplementary Analyses
+# Appendix B: Extended Data Tables and Figures
 
-This appendix contains additional analyses and figures that supplement the main findings presented in the progress report.
+This appendix contains additional data tables and figures that supplement the main progress report.
 
-## Age-Related Effects in Neural Signatures
-
-While the main report focuses on group differences in neural signatures of cognitive control, here we provide additional analyses of age-related effects within each group.
+## Extended Demographic Information
 
 ```{r}
 #| echo: false
 #| warning: false
 #| message: false
-#| fig.width: 10
-#| fig.height: 8
-#| fig.cap: "Age-related changes in key ROI activations during cognitive control across groups"
 
-# Load required libraries
-suppressPackageStartupMessages({
-  library(tidyverse)
-  library(ggplot2)
-  library(patchwork)
-  library(viridis)
-  library(mgcv)
-})
-
-# Create simulated data for age-related ROI activations
-set.seed(123)
-
-# Generate data
-create_roi_data <- function(
-  n_subjects = 50,
-  age_range = 7:18,
-  group,
-  intercept,
-  linear_effect,
-  nonlinear_effect = 0,
-  noise_sd
-) {
-  subjects_per_age <- n_subjects / length(age_range)
-
-  roi_data <- tibble()
-  for (age in age_range) {
-    n <- round(subjects_per_age)
-
-    age_data <- tibble(
-      subject_id = paste0(
-        group,
-        "_",
-        (nrow(roi_data) + 1):(nrow(roi_data) + n)
-      ),
-      age = age,
-      group = group,
-      # Add noise and potential nonlinear effect
-      activation = intercept +
-        (linear_effect * age) +
-        (nonlinear_effect * (age - mean(age_range))^2) +
-        rnorm(n, 0, noise_sd)
-    )
-    roi_data <- bind_rows(roi_data, age_data)
-  }
-
-  return(roi_data)
-}
-
-# Create data for three ROIs across three groups
-# ROI 1: dlPFC
-dlpfc_td <- create_roi_data(
-  group = "TD",
-  intercept = -0.2,
-  linear_effect = 0.05,
-  noise_sd = 0.15
-)
-dlpfc_adhd <- create_roi_data(
-  group = "ADHD",
-  intercept = -0.4,
-  linear_effect = 0.03,
-  noise_sd = 0.18
-)
-dlpfc_asd <- create_roi_data(
-  group = "ASD",
-  intercept = -0.3,
-  linear_effect = 0.02,
-  noise_sd = 0.16
-)
-dlpfc_data <- bind_rows(dlpfc_td, dlpfc_adhd, dlpfc_asd) %>%
-  mutate(roi = "Dorsolateral Prefrontal Cortex")
-
-# ROI 2: ACC
-acc_td <- create_roi_data(
-  group = "TD",
-  intercept = 0.1,
-  linear_effect = 0.04,
-  noise_sd = 0.14
-)
-acc_adhd <- create_roi_data(
-  group = "ADHD",
-  intercept = -0.1,
-  linear_effect = 0.02,
-  noise_sd = 0.17
-)
-acc_asd <- create_roi_data(
-  group = "ASD",
-  intercept = 0.05,
-  linear_effect = 0.01,
-  noise_sd = 0.15
-)
-acc_data <- bind_rows(acc_td, acc_adhd, acc_asd) %>%
-  mutate(roi = "Anterior Cingulate Cortex")
-
-# ROI 3: Striatum - with nonlinear effect
-striatum_td <- create_roi_data(
-  group = "TD",
-  intercept = 0,
-  linear_effect = 0.03,
-  nonlinear_effect = 0.01,
-  noise_sd = 0.16
-)
-striatum_adhd <- create_roi_data(
-  group = "ADHD",
-  intercept = -0.2,
-  linear_effect = 0.01,
-  nonlinear_effect = 0.005,
-  noise_sd = 0.19
-)
-striatum_asd <- create_roi_data(
-  group = "ASD",
-  intercept = -0.1,
-  linear_effect = 0.02,
-  nonlinear_effect = 0.008,
-  noise_sd = 0.17
-)
-striatum_data <- bind_rows(striatum_td, striatum_adhd, striatum_asd) %>%
-  mutate(roi = "Striatum")
-
-# Combine all ROI data
-all_roi_data <- bind_rows(dlpfc_data, acc_data, striatum_data) %>%
-  mutate(group = factor(group, levels = c("TD", "ADHD", "ASD")))
-
-# Create plot
-ggplot(all_roi_data, aes(x = age, y = activation, color = group)) +
-  geom_point(alpha = 0.5, size = 1.5) +
-  geom_smooth(
-    method = "gam",
-    formula = y ~ s(x, k = 5),
-    se = TRUE,
-    linewidth = 1.2
-  ) +
-  facet_wrap(~roi, ncol = 3) +
-  scale_color_viridis_d(option = "plasma", end = 0.8, name = "Group") +
-  theme_minimal() +
-  labs(
-    title = "Age-Related Changes in Brain Activation During Cognitive Control",
-    subtitle = "Smoothed developmental trajectories across three key regions",
-    x = "Age (years)",
-    y = "Activation (% signal change)"
-  ) +
-  theme(
-    strip.text = element_text(size = 12, face = "bold"),
-    strip.background = element_rect(fill = "gray95", color = NA),
-    legend.position = "bottom"
-  )
-```
-
-### Statistical Analysis of Age Effects
-
-We used mixed-effects models to test for group differences in age-related changes in brain activation. For each ROI, we fitted the following model:
-
-$$\text{Activation} = \beta_0 + \beta_1 \cdot \text{Age} + \beta_2 \cdot \text{Group} + \beta_3 \cdot (\text{Age} \times \text{Group}) + \gamma \cdot \text{Subject} + \epsilon$$
-
-Where $\gamma$ represents random effects for subjects and $\epsilon$ is the error term.
-
-```{r}
-#| echo: false
-#| warning: false
-
-library(knitr)
+library(tidyverse)
 library(kableExtra)
 
-# Create table of mixed model results
-model_results <- tribble(
-  ~ROI,
-  ~Term,
-  ~Estimate,
-  ~SE,
-  ~t_value,
-  ~p_value,
-  "dlPFC",
-  "Intercept",
-  -0.22,
-  0.08,
-  -2.75,
-  0.006,
-  "dlPFC",
-  "Age",
-  0.05,
-  0.01,
-  5.00,
-  "<0.001",
-  "dlPFC",
-  "Group: ADHD",
-  -0.18,
-  0.10,
-  -1.80,
-  0.072,
-  "dlPFC",
-  "Group: ASD",
-  -0.12,
-  0.10,
-  -1.20,
-  0.230,
-  "dlPFC",
-  "Age × Group: ADHD",
-  -0.02,
-  0.01,
-  -2.00,
-  0.045,
-  "dlPFC",
-  "Age × Group: ASD",
-  -0.03,
-  0.01,
-  -3.00,
-  0.003,
+# Simulate demographic data
+set.seed(789)
 
-  "ACC",
-  "Intercept",
-  0.12,
-  0.07,
-  1.71,
-  0.088,
-  "ACC",
-  "Age",
-  0.04,
-  0.01,
-  4.00,
-  "<0.001",
-  "ACC",
-  "Group: ADHD",
-  -0.22,
-  0.10,
-  -2.20,
-  0.028,
-  "ACC",
-  "Group: ASD",
-  -0.08,
-  0.10,
-  -0.80,
-  0.424,
-  "ACC",
-  "Age × Group: ADHD",
-  -0.02,
-  0.01,
-  -2.00,
-  0.046,
-  "ACC",
-  "Age × Group: ASD",
-  -0.03,
-  0.01,
-  -3.00,
-  0.003,
-
-  "Striatum",
-  "Intercept",
-  0.02,
-  0.08,
-  0.25,
-  0.803,
-  "Striatum",
-  "Age",
-  0.03,
-  0.01,
-  3.00,
-  0.003,
-  "Striatum",
-  "Age²",
-  0.01,
-  0.003,
-  3.33,
-  0.001,
-  "Striatum",
-  "Group: ADHD",
-  -0.20,
-  0.10,
-  -2.00,
-  0.046,
-  "Striatum",
-  "Group: ASD",
-  -0.12,
-  0.10,
-  -1.20,
-  0.230,
-  "Striatum",
-  "Age × Group: ADHD",
-  -0.02,
-  0.01,
-  -2.00,
-  0.046,
-  "Striatum",
-  "Age × Group: ASD",
-  -0.01,
-  0.01,
-  -1.00,
-  0.317
+demographic_data <- tibble(
+  Group = rep(c("Typically Developing", "ADHD", "ASD"), each = 1),
+  n = c(48, 52, 45),
+  `Age Range` = c("7.2 - 17.9", "7.4 - 18.0", "7.1 - 17.6"),
+  `Age (Mean ± SD)` = c("12.4 ± 3.2", "12.1 ± 3.5", "11.8 ± 3.3"),
+  `Sex (M/F)` = c("25/23", "34/18", "32/13"),
+  `IQ (Mean ± SD)` = c("112.3 ± 12.5", "108.6 ± 13.2", "106.8 ± 15.4"),
+  `SES (Mean ± SD)` = c("46.8 ± 11.2", "43.2 ± 12.5", "44.5 ± 13.1"),
+  `Medication (%)` = c("0%", "68%", "42%"),
+  `Comorbidities (%)` = c("0%", "54%", "63%")
 )
 
-# Format p-values
-model_results <- model_results %>%
-  mutate(
-    p_value = ifelse(
-      p_value == "<0.001",
-      "<0.001",
-      ifelse(
-        as.numeric(p_value) < 0.05,
-        paste0(format(round(as.numeric(p_value), 3), nsmall = 3), "*"),
-        format(round(as.numeric(p_value), 3), nsmall = 3)
-      )
-    )
-  )
-
-# Create table
+# Create extended demographic table
 kable(
-  model_results,
-  caption = "Table B1: Mixed-effects model results for age-related changes in brain activation",
-  col.names = c("ROI", "Term", "Estimate", "SE", "t-value", "p-value")
+  demographic_data,
+  caption = "Table B1: Extended demographic information for study participants.",
+  align = "lcccccccc"
 ) %>%
   kable_styling(
     bootstrap_options = c("striped", "hover", "condensed"),
-    full_width = FALSE
-  ) %>%
-  pack_rows("Dorsolateral Prefrontal Cortex", 1, 6) %>%
-  pack_rows("Anterior Cingulate Cortex", 7, 12) %>%
-  pack_rows("Striatum", 13, 19)
+    full_width = TRUE,
+    position = "center"
+  )
 ```
 
-The statistical analysis confirms significant age-by-group interactions, indicating that the developmental trajectories of neural activation differ between typically developing children and those with neurodevelopmental disorders.
+*Note: SES = Socioeconomic Status measured using the Hollingshead Four-Factor Index of Social Status. Medication refers to current psychotropic medication use. Comorbidities include anxiety disorders, mood disorders, learning disabilities, and other neurodevelopmental conditions.*
 
-## Resting-State Functional Connectivity
-
-In addition to task-based analyses, we conducted resting-state functional connectivity analyses to examine intrinsic network organization.
+## Medication Status Details
 
 ```{r}
 #| echo: false
 #| warning: false
 #| message: false
-#| fig.width: 10
-#| fig.height: 7
-#| fig.cap: "Group differences in resting-state functional connectivity within the cognitive control network"
 
-# Load required libraries
-suppressPackageStartupMessages({
-  library(tidyverse)
-  library(reshape2)
-  library(viridis)
-  library(pheatmap)
-  library(grid)
-  library(gridExtra)
-})
-
-# Set seed for reproducibility
-set.seed(456)
-
-# Define regions for connectivity matrix
-regions <- c(
-  "dlPFC L",
-  "dlPFC R",
-  "ACC",
-  "PPC L",
-  "PPC R",
-  "Striatum L",
-  "Striatum R",
-  "Thalamus"
-)
-n_regions <- length(regions)
-
-# Create connectivity matrices for each group
-create_conn_matrix <- function(base_conn, noise_sd) {
-  # Ensure symmetry
-  base_conn[upper.tri(base_conn)] <- t(base_conn)[upper.tri(base_conn)]
-  # Add noise
-  conn <- base_conn +
-    matrix(rnorm(n_regions^2, 0, noise_sd), n_regions, n_regions)
-  # Ensure diagonal is 1
-  diag(conn) <- 1
-  # Ensure symmetry after adding noise
-  conn[upper.tri(conn)] <- t(conn)[upper.tri(conn)]
-  return(conn)
-}
-
-# Base connectivity values (symmetric)
-td_base <- matrix(
-  c(
-    1.00,
-    0.70,
-    0.60,
-    0.50,
-    0.45,
-    0.55,
-    0.50,
-    0.40,
-    0.70,
-    1.00,
-    0.65,
-    0.45,
-    0.55,
-    0.50,
-    0.60,
-    0.35,
-    0.60,
-    0.65,
-    1.00,
-    0.55,
-    0.50,
-    0.65,
-    0.60,
-    0.45,
-    0.50,
-    0.45,
-    0.55,
-    1.00,
-    0.75,
-    0.40,
-    0.35,
-    0.30,
-    0.45,
-    0.55,
-    0.50,
-    0.75,
-    1.00,
-    0.35,
-    0.45,
-    0.25,
-    0.55,
-    0.50,
-    0.65,
-    0.40,
-    0.35,
-    1.00,
-    0.80,
-    0.60,
-    0.50,
-    0.60,
-    0.60,
-    0.35,
-    0.45,
-    0.80,
-    1.00,
-    0.55,
-    0.40,
-    0.35,
-    0.45,
-    0.30,
-    0.25,
-    0.60,
-    0.55,
-    1.00
+# Create medication details table
+medication_data <- tibble(
+  Medication = c(
+    "Stimulants",
+    "Selective Serotonin Reuptake Inhibitors (SSRIs)",
+    "Alpha-2 Agonists",
+    "Atypical Antipsychotics",
+    "Atomoxetine",
+    "Other"
   ),
-  nrow = n_regions,
-  byrow = TRUE
-)
-
-# ADHD: reduced frontoparietal and frontostriatal connectivity
-adhd_base <- td_base
-adhd_base[1:3, 4:5] <- adhd_base[1:3, 4:5] - 0.15 # Reduced frontoparietal
-adhd_base[4:5, 1:3] <- adhd_base[4:5, 1:3] - 0.15 # Symmetric
-adhd_base[1:3, 6:7] <- adhd_base[1:3, 6:7] - 0.20 # Reduced frontostriatal
-adhd_base[6:7, 1:3] <- adhd_base[6:7, 1:3] - 0.20 # Symmetric
-
-# ASD: reduced long-range connectivity but increased local connectivity
-asd_base <- td_base
-asd_base[1:3, 4:8] <- asd_base[1:3, 4:8] - 0.25 # Reduced long-range
-asd_base[4:8, 1:3] <- asd_base[4:8, 1:3] - 0.25 # Symmetric
-asd_base[1:3, 1:3] <- asd_base[1:3, 1:3] + 0.10 # Increased local frontal
-asd_base[4:5, 4:5] <- asd_base[4:5, 4:5] + 0.10 # Increased local parietal
-
-# Create final matrices with noise
-td_conn <- create_conn_matrix(td_base, 0.05)
-adhd_conn <- create_conn_matrix(adhd_base, 0.05)
-asd_conn <- create_conn_matrix(asd_base, 0.05)
-
-# Create difference matrices
-adhd_diff <- adhd_conn - td_conn
-asd_diff <- asd_conn - td_conn
-
-# Function to create a heatmap plot with custom formatting
-create_heatmap <- function(matrix_data, title, is_diff = FALSE) {
-  if (is_diff) {
-    color_palette <- colorRampPalette(c("blue", "white", "red"))(100)
-    breaks <- seq(-0.3, 0.3, length.out = 101)
-  } else {
-    color_palette <- viridis(100, option = "plasma")
-    breaks <- seq(0, 1, length.out = 101)
-  }
-
-  # Create the heatmap
-  pheatmap(
-    matrix_data,
-    color = color_palette,
-    breaks = breaks,
-    cluster_rows = FALSE,
-    cluster_cols = FALSE,
-    show_rownames = TRUE,
-    show_colnames = TRUE,
-    labels_row = regions,
-    labels_col = regions,
-    main = title,
-    fontsize = 10,
-    fontsize_row = 9,
-    fontsize_col = 9,
-    border_color = NA,
-    silent = TRUE
-  )
-}
-
-# Create the three heatmaps
-hm1 <- create_heatmap(td_conn, "TD")
-hm2 <- create_heatmap(adhd_conn, "ADHD")
-hm3 <- create_heatmap(asd_conn, "ASD")
-hm4 <- create_heatmap(adhd_diff, "ADHD - TD", TRUE)
-hm5 <- create_heatmap(asd_diff, "ASD - TD", TRUE)
-
-# Plot the heatmaps in a grid
-grid.arrange(
-  arrangeGrob(
-    hm1[[4]],
-    top = textGrob("TD", gp = gpar(fontsize = 14, fontface = "bold"))
+  `ADHD Group (n=52)` = c(
+    "28 (53.8%)",
+    "8 (15.4%)",
+    "7 (13.5%)",
+    "4 (7.7%)",
+    "6 (11.5%)",
+    "3 (5.8%)"
   ),
-  arrangeGrob(
-    hm2[[4]],
-    top = textGrob("ADHD", gp = gpar(fontsize = 14, fontface = "bold"))
-  ),
-  arrangeGrob(
-    hm3[[4]],
-    top = textGrob("ASD", gp = gpar(fontsize = 14, fontface = "bold"))
-  ),
-  arrangeGrob(
-    hm4[[4]],
-    top = textGrob("ADHD - TD", gp = gpar(fontsize = 14, fontface = "bold"))
-  ),
-  arrangeGrob(
-    hm5[[4]],
-    top = textGrob("ASD - TD", gp = gpar(fontsize = 14, fontface = "bold"))
-  ),
-  ncol = 3,
-  top = textGrob(
-    "Resting-State Functional Connectivity in Cognitive Control Network",
-    gp = gpar(fontsize = 16, fontface = "bold")
+  `ASD Group (n=45)` = c(
+    "8 (17.8%)",
+    "12 (26.7%)",
+    "5 (11.1%)",
+    "7 (15.6%)",
+    "2 (4.4%)",
+    "5 (11.1%)"
   )
 )
-```
 
-### Network Measures
-
-We calculated graph theoretical measures to quantify network properties for each group:
-
-```{r}
-#| echo: false
-
-# Create table of network metrics
-network_metrics <- tribble(
-  ~Metric,
-  ~TD,
-  ~ADHD,
-  ~ASD,
-  ~ADHD_p,
-  ~ASD_p,
-  "Global Efficiency",
-  0.62,
-  0.55,
-  0.49,
-  0.018,
-  0.003,
-  "Clustering Coefficient",
-  0.59,
-  0.54,
-  0.65,
-  0.128,
-  0.042,
-  "Modularity (Q)",
-  0.32,
-  0.41,
-  0.46,
-  0.009,
-  0.001,
-  "Frontoparietal Connectivity",
-  0.48,
-  0.35,
-  0.27,
-  0.002,
-  "<0.001",
-  "Frontostriatal Connectivity",
-  0.53,
-  0.36,
-  0.42,
-  0.004,
-  0.032,
-  "Small-worldness",
-  1.86,
-  1.62,
-  2.05,
-  0.076,
-  0.047
-)
-
-# Format p-values with asterisks for significance
-network_metrics <- network_metrics %>%
-  mutate(
-    ADHD_p = ifelse(
-      ADHD_p == "<0.001",
-      "<0.001*",
-      ifelse(
-        as.numeric(ADHD_p) < 0.05,
-        paste0(format(round(as.numeric(ADHD_p), 3), nsmall = 3), "*"),
-        format(round(as.numeric(ADHD_p), 3), nsmall = 3)
-      )
-    ),
-    ASD_p = ifelse(
-      ASD_p == "<0.001",
-      "<0.001*",
-      ifelse(
-        as.numeric(ASD_p) < 0.05,
-        paste0(format(round(as.numeric(ASD_p), 3), nsmall = 3), "*"),
-        format(round(as.numeric(ASD_p), 3), nsmall = 3)
-      )
-    )
-  )
-
-# Create table
 kable(
-  network_metrics,
-  caption = "Table B2: Graph theoretical measures of resting-state functional connectivity",
-  col.names = c(
-    "Network Metric",
-    "TD",
-    "ADHD",
-    "ASD",
-    "ADHD vs TD (p)",
-    "ASD vs TD (p)"
-  )
+  medication_data,
+  caption = "Table B2: Medication status of ADHD and ASD participants.",
+  align = "lcc"
 ) %>%
   kable_styling(
-    bootstrap_options = c("striped", "hover"),
-    full_width = FALSE
+    bootstrap_options = c("striped", "hover", "condensed"),
+    full_width = FALSE,
+    position = "center"
   ) %>%
-  add_footnote("* indicates p < 0.05", notation = "none")
+  add_footnote(
+    "Note: Some participants were taking multiple medications, so percentages may sum to >100%.",
+    notation = "symbol"
+  )
 ```
 
-These results demonstrate distinct patterns of network organization in ADHD and ASD. The ADHD group shows reduced global efficiency and frontoparietal/frontostriatal connectivity, while the ASD group shows increased clustering and modularity, consistent with an overconnected-local/underconnected-global pattern.
-
-## Exploratory Analysis of Computational Modeling Parameters
-
-We fit drift diffusion models to behavioral data from the Stop Signal Task to estimate cognitive parameters underlying task performance.
+## Extended Task Performance Data
 
 ```{r}
 #| echo: false
 #| warning: false
 #| message: false
-#| fig.width: 10
-#| fig.height: 6
-#| fig.cap: "Drift diffusion model parameters across groups"
+#| fig-width: 10
+#| fig-height: 6
+#| fig-cap: "Figure B1: Performance on multiple cognitive control tasks across groups."
 
-# Load required libraries
-suppressPackageStartupMessages({
-  library(tidyverse)
-  library(ggplot2)
-  library(patchwork)
-  library(viridis)
-})
+# Simulate task performance data
+set.seed(123)
+n_per_group <- 50
 
-# Set seed for reproducibility
-set.seed(789)
+task_data <- tibble(
+  ID = 1:(n_per_group * 3),
+  Group = rep(c("Typically Developing", "ADHD", "ASD"), each = n_per_group),
 
-# Generate simulated drift diffusion model parameters
-n_per_group <- 60
-
-# Create dataset with parameters
-ddm_params <- tibble(
-  subject_id = paste0("S", 1:(n_per_group * 3)),
-  group = rep(c("TD", "ADHD", "ASD"), each = n_per_group),
-
-  # Drift rate (quality of evidence accumulation)
-  drift_rate = c(
-    rnorm(n_per_group, mean = 2.8, sd = 0.5), # TD
-    rnorm(n_per_group, mean = 2.3, sd = 0.6), # ADHD
-    rnorm(n_per_group, mean = 2.5, sd = 0.7) # ASD
+  # Stop Signal Task
+  SST_SSRT = c(
+    rnorm(n_per_group, 250, 30), # TD
+    rnorm(n_per_group, 290, 40), # ADHD
+    rnorm(n_per_group, 280, 35) # ASD
   ),
 
-  # Boundary separation (response caution)
-  boundary = c(
-    rnorm(n_per_group, mean = 1.5, sd = 0.3), # TD
-    rnorm(n_per_group, mean = 1.2, sd = 0.4), # ADHD
-    rnorm(n_per_group, mean = 1.7, sd = 0.4) # ASD
+  # Flanker Task
+  Flanker_RT_Diff = c(
+    rnorm(n_per_group, 60, 20), # TD
+    rnorm(n_per_group, 85, 25), # ADHD
+    rnorm(n_per_group, 75, 22) # ASD
   ),
 
-  # Non-decision time (encoding + motor response)
-  ndt = c(
-    rnorm(n_per_group, mean = 0.3, sd = 0.05), # TD
-    rnorm(n_per_group, mean = 0.35, sd = 0.08), # ADHD
-    rnorm(n_per_group, mean = 0.37, sd = 0.07) # ASD
+  # Task Switching
+  Switch_Cost = c(
+    rnorm(n_per_group, 150, 40), # TD
+    rnorm(n_per_group, 200, 50), # ADHD
+    rnorm(n_per_group, 190, 45) # ASD
   ),
 
-  # Starting point bias (response bias)
-  bias = c(
-    rnorm(n_per_group, mean = 0.5, sd = 0.05), # TD
-    rnorm(n_per_group, mean = 0.55, sd = 0.08), # ADHD
-    rnorm(n_per_group, mean = 0.52, sd = 0.06) # ASD
+  # Working Memory Task
+  WM_Accuracy = c(
+    rbeta(n_per_group, 8, 2) * 100, # TD
+    rbeta(n_per_group, 6, 3) * 100, # ADHD
+    rbeta(n_per_group, 7, 3) * 100 # ASD
   )
-) %>%
-  # Ensure parameters stay in reasonable ranges
-  mutate(
-    drift_rate = pmax(0.5, drift_rate),
-    boundary = pmax(0.5, boundary),
-    ndt = pmax(0.1, ndt),
-    bias = pmin(pmax(0.3, bias), 0.7)
-  ) %>%
-  # Convert group to factor
-  mutate(group = factor(group, levels = c("TD", "ADHD", "ASD")))
+)
 
-# Reshape data for plotting
-ddm_long <- ddm_params %>%
+# Prepare for visualization
+task_long <- task_data %>%
   pivot_longer(
-    cols = c(drift_rate, boundary, ndt, bias),
-    names_to = "parameter",
-    values_to = "value"
+    cols = c(SST_SSRT, Flanker_RT_Diff, Switch_Cost, WM_Accuracy),
+    names_to = "Task",
+    values_to = "Performance"
   ) %>%
   mutate(
-    parameter = factor(
-      parameter,
-      levels = c("drift_rate", "boundary", "ndt", "bias"),
-      labels = c(
-        "Drift Rate",
-        "Boundary Separation",
-        "Non-Decision Time",
-        "Starting Point Bias"
+    Task = factor(
+      case_when(
+        Task == "SST_SSRT" ~ "Stop Signal Task\n(SSRT, ms)",
+        Task == "Flanker_RT_Diff" ~ "Flanker Task\n(Interference Effect, ms)",
+        Task == "Switch_Cost" ~ "Task Switching\n(Switch Cost, ms)",
+        Task == "WM_Accuracy" ~ "Working Memory\n(Accuracy, %)"
+      ),
+      levels = c(
+        "Stop Signal Task\n(SSRT, ms)",
+        "Flanker Task\n(Interference Effect, ms)",
+        "Task Switching\n(Switch Cost, ms)",
+        "Working Memory\n(Accuracy, %)"
       )
     )
   )
 
-# Create plot
-ggplot(ddm_long, aes(x = group, y = value, fill = group)) +
-  geom_violin(alpha = 0.7) +
-  geom_boxplot(width = 0.2, alpha = 0.7, outlier.shape = NA) +
+# Create visualization
+ggplot(task_long, aes(x = Group, y = Performance, fill = Group)) +
+  geom_violin(alpha = 0.7, scale = "width") +
+  geom_boxplot(width = 0.2, alpha = 0.5, outlier.shape = NA) +
   stat_summary(
-    fun = "mean",
+    fun = mean,
     geom = "point",
     shape = 23,
     size = 3,
     fill = "white"
   ) +
-  facet_wrap(~parameter, scales = "free_y", ncol = 4) +
-  scale_fill_viridis_d(option = "plasma", end = 0.85) +
-  theme_minimal() +
+  scale_fill_viridis_d(option = "plasma", end = 0.8) +
+  facet_wrap(~Task, scales = "free_y") +
+  theme_minimal(base_size = 12) +
+  theme(
+    legend.position = "bottom",
+    panel.grid.minor = element_blank(),
+    strip.text = element_text(size = 12, face = "bold"),
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  ) +
   labs(
-    title = "Drift Diffusion Model Parameters for Stop Signal Task",
-    subtitle = "Comparing cognitive process parameters across diagnostic groups",
+    title = "Performance Across Multiple Cognitive Control Tasks",
     x = NULL,
     y = NULL,
     fill = "Group"
-  ) +
-  theme(
-    strip.text = element_text(size = 12, face = "bold"),
-    strip.background = element_rect(fill = "gray95", color = NA),
-    legend.position = "bottom",
-    axis.text.x = element_blank(),
-    axis.ticks.x = element_blank(),
-    panel.grid.major.x = element_blank()
   )
 ```
 
-### Statistical Analysis of Drift Diffusion Parameters
+*Note: For Stop Signal Task, Flanker Task, and Task Switching, lower values indicate better performance. For Working Memory Task, higher values indicate better performance.*
 
-```{r}
-#| echo: false
-
-# Perform ANOVAs on each parameter
-drift_aov <- summary(aov(drift_rate ~ group, data = ddm_params))
-boundary_aov <- summary(aov(boundary ~ group, data = ddm_params))
-ndt_aov <- summary(aov(ndt ~ group, data = ddm_params))
-bias_aov <- summary(aov(bias ~ group, data = ddm_params))
-
-# Format p-values
-format_p <- function(p) {
-  if (p < 0.001) return("<0.001*")
-  if (p < 0.05) return(paste0(format(round(p, 3), nsmall = 3), "*"))
-  return(format(round(p, 3), nsmall = 3))
-}
-
-# Create ANOVA summary table
-anova_results <- tribble(
-  ~Parameter,
-  ~F_value,
-  ~df,
-  ~p_value,
-  "Drift Rate",
-  drift_aov[[1]]$`F value`[1],
-  "2, 177",
-  format_p(drift_aov[[1]]$`Pr(>F)`[1]),
-  "Boundary Separation",
-  boundary_aov[[1]]$`F value`[1],
-  "2, 177",
-  format_p(boundary_aov[[1]]$`Pr(>F)`[1]),
-  "Non-Decision Time",
-  ndt_aov[[1]]$`F value`[1],
-  "2, 177",
-  format_p(ndt_aov[[1]]$`Pr(>F)`[1]),
-  "Starting Point Bias",
-  bias_aov[[1]]$`F value`[1],
-  "2, 177",
-  format_p(bias_aov[[1]]$`Pr(>F)`[1])
-)
-
-# Format F values
-anova_results <- anova_results %>%
-  mutate(F_value = round(F_value, 2))
-
-# Create table
-kable(
-  anova_results,
-  caption = "Table B3: ANOVA results for group differences in drift diffusion parameters",
-  col.names = c("Parameter", "F value", "df", "p-value")
-) %>%
-  kable_styling(
-    bootstrap_options = c("striped", "hover"),
-    full_width = FALSE
-  ) %>%
-  add_footnote("* indicates p < 0.05", notation = "none")
-
-# Post-hoc comparison table
-posthoc_results <- tribble(
-  ~Parameter,
-  ~Comparison,
-  ~Mean_Diff,
-  ~p_value,
-  "Drift Rate",
-  "TD vs. ADHD",
-  0.50,
-  0.001,
-  "Drift Rate",
-  "TD vs. ASD",
-  0.30,
-  0.024,
-  "Drift Rate",
-  "ADHD vs. ASD",
-  -0.20,
-  0.143,
-  "Boundary Separation",
-  "TD vs. ADHD",
-  0.30,
-  0.006,
-  "Boundary Separation",
-  "TD vs. ASD",
-  -0.20,
-  0.043,
-  "Boundary Separation",
-  "ADHD vs. ASD",
-  -0.50,
-  "<0.001",
-  "Non-Decision Time",
-  "TD vs. ADHD",
-  -0.05,
-  0.032,
-  "Non-Decision Time",
-  "TD vs. ASD",
-  -0.07,
-  0.004,
-  "Non-Decision Time",
-  "ADHD vs. ASD",
-  -0.02,
-  0.387,
-  "Starting Point Bias",
-  "TD vs. ADHD",
-  -0.05,
-  0.021,
-  "Starting Point Bias",
-  "TD vs. ASD",
-  -0.02,
-  0.268,
-  "Starting Point Bias",
-  "ADHD vs. ASD",
-  0.03,
-  0.154
-)
-
-# Format Mean Diff and p-values
-posthoc_results <- posthoc_results %>%
-  mutate(
-    Mean_Diff = format(round(Mean_Diff, 2), nsmall = 2),
-    p_value = ifelse(
-      p_value == "<0.001",
-      "<0.001*",
-      ifelse(
-        p_value < 0.05,
-        paste0(format(round(p_value, 3), nsmall = 3), "*"),
-        format(round(p_value, 3), nsmall = 3)
-      )
-    )
-  )
-
-# Create table
-kable(
-  posthoc_results,
-  caption = "Table B4: Post-hoc comparisons of drift diffusion parameters (Tukey HSD)",
-  col.names = c("Parameter", "Comparison", "Mean Difference", "p-value")
-) %>%
-  kable_styling(
-    bootstrap_options = c("striped", "hover"),
-    full_width = FALSE
-  ) %>%
-  add_footnote("* indicates p < 0.05", notation = "none") %>%
-  pack_rows("Drift Rate", 1, 3) %>%
-  pack_rows("Boundary Separation", 4, 6) %>%
-  pack_rows("Non-Decision Time", 7, 9) %>%
-  pack_rows("Starting Point Bias", 10, 12)
-```
-
-These results reveal distinct computational profiles for ADHD and ASD:
-
-1. **ADHD**: Characterized by reduced drift rate (slower information accumulation) and reduced boundary separation (less cautious decision-making), consistent with impulsive responding.
-
-2. **ASD**: Characterized by increased boundary separation (more cautious decision-making) and longer non-decision time (slower sensory/motor processes), consistent with a deliberative but slower cognitive style.
-
-## Relating Computational Parameters to Neural Measures
-
-We explored correlations between drift diffusion model parameters and neural activation in key regions of interest:
+## Correlation Matrix
 
 ```{r}
 #| echo: false
 #| warning: false
 #| message: false
-#| fig.width: 9
-#| fig.height: 7
-#| fig.cap: "Correlations between drift rate and dlPFC activation during successful stopping across groups"
+#| fig-width: 8
+#| fig-height: 7
+#| fig-cap: "Figure B2: Correlation matrix of behavioral measures and neural activation in key regions of interest."
 
-# Create simulated data for correlations
-set.seed(101)
+library(corrplot)
+
+# Simulate correlation data
+set.seed(456)
+
+# Create correlation matrix with realistic relationships
+cor_matrix <- matrix(
+  c(
+    # SST_SSRT
+    1.00,
+    0.42,
+    0.38,
+    -0.35,
+    0.45,
+    -0.52,
+    0.33,
+    -0.28,
+
+    # Flanker_RT_Diff
+    0.42,
+    1.00,
+    0.44,
+    -0.31,
+    0.29,
+    -0.38,
+    0.25,
+    -0.22,
+
+    # Switch_Cost
+    0.38,
+    0.44,
+    1.00,
+    -0.40,
+    0.32,
+    -0.35,
+    0.27,
+    -0.30,
+
+    # WM_Accuracy
+    -0.35,
+    -0.31,
+    -0.40,
+    1.00,
+    -0.26,
+    0.48,
+    -0.23,
+    0.41,
+
+    # rIFG_Activation
+    0.45,
+    0.29,
+    0.32,
+    -0.26,
+    1.00,
+    -0.45,
+    0.58,
+    -0.33,
+
+    # ACC_Activation
+    -0.52,
+    -0.38,
+    -0.35,
+    0.48,
+    -0.45,
+    1.00,
+    -0.36,
+    0.50,
+
+    # Striatum_Activation
+    0.33,
+    0.25,
+    0.27,
+    -0.23,
+    0.58,
+    -0.36,
+    1.00,
+    -0.29,
+
+    # DLPFC_Activation
+    -0.28,
+    -0.22,
+    -0.30,
+    0.41,
+    -0.33,
+    0.50,
+    -0.29,
+    1.00
+  ),
+  nrow = 8,
+  byrow = TRUE
+)
+
+# Column and row names
+colnames(cor_matrix) <- rownames(cor_matrix) <- c(
+  "SST (SSRT)",
+  "Flanker Effect",
+  "Switch Cost",
+  "WM Accuracy",
+  "rIFG Activation",
+  "ACC Activation",
+  "Striatum Activation",
+  "DLPFC Activation"
+)
+
+# Plot correlation matrix
+corrplot(
+  cor_matrix,
+  method = "color",
+  type = "upper",
+  order = "hclust",
+  tl.col = "black",
+  tl.srt = 45,
+  addCoef.col = "black",
+  col = colorRampPalette(c(
+    "#2166AC",
+    "#D1E5F0",
+    "#FFFFFF",
+    "#FDDBC7",
+    "#B2182B"
+  ))(200),
+  diag = FALSE,
+  tl.cex = 0.8,
+  cl.cex = 0.8,
+  number.cex = 0.7,
+  title = "Correlation Matrix of Behavioral and Neural Measures",
+  mar = c(0, 0, 2, 0)
+)
+```
+
+*Note: Correlations are based on data from all participants (N = 145). rIFG = right inferior frontal gyrus, ACC = anterior cingulate cortex, DLPFC = dorsolateral prefrontal cortex.*
+
+## Neural Network Analysis Results
+
+```{r}
+#| echo: false
+#| warning: false
+#| message: false
+
+# Create network analysis results table
+network_results <- tibble(
+  `Network Metric` = c(
+    "Global Efficiency",
+    "Local Efficiency",
+    "Modularity (Q)",
+    "Small-worldness",
+    "Frontoparietal-Default Mode Connectivity",
+    "Frontoparietal-Salience Connectivity",
+    "Salience-Default Mode Connectivity"
+  ),
+  `Typically Developing` = c(
+    "0.42 ± 0.05",
+    "0.64 ± 0.07",
+    "0.38 ± 0.04",
+    "1.74 ± 0.23",
+    "-0.12 ± 0.08",
+    "0.35 ± 0.07",
+    "-0.08 ± 0.06"
+  ),
+  `ADHD` = c(
+    "0.38 ± 0.06*",
+    "0.59 ± 0.08*",
+    "0.34 ± 0.05*",
+    "1.56 ± 0.25*",
+    "-0.07 ± 0.09*",
+    "0.28 ± 0.08*",
+    "-0.04 ± 0.07*"
+  ),
+  `ASD` = c(
+    "0.39 ± 0.06*",
+    "0.61 ± 0.07",
+    "0.31 ± 0.06**",
+    "1.62 ± 0.24*",
+    "-0.02 ± 0.08**",
+    "0.30 ± 0.07*",
+    "0.01 ± 0.08**"
+  )
+)
+
+kable(
+  network_results,
+  caption = "Table B3: Brain network metrics during cognitive control by group.",
+  align = "lccc"
+) %>%
+  kable_styling(
+    bootstrap_options = c("striped", "hover", "condensed"),
+    full_width = TRUE,
+    position = "center"
+  ) %>%
+  add_footnote(
+    c(
+      "Values are presented as mean ± standard deviation.",
+      "* p < 0.05, ** p < 0.01 compared to Typically Developing group, FDR-corrected for multiple comparisons."
+    ),
+    notation = "symbol"
+  )
+```
+
+## Future Analyses
+
+The following additional analyses will be conducted in the next phase of the project:
+
+1. **Multivariate Pattern Analysis (MVPA)**: We will apply MVPA techniques to identify distributed patterns of neural activity that differentiate between successful and unsuccessful inhibition trials, as well as between diagnostic groups.
+
+2. **Dynamic Connectivity Analysis**: We will examine time-varying changes in functional connectivity during cognitive control tasks using sliding window approaches and dynamic causal modeling.
+
+3. **Integration with Genetic Data**: For a subset of participants with available genetic data (N = 68), we will explore associations between polygenic risk scores for ADHD/ASD and neural signatures of cognitive control.
+
+4. **Machine Learning Prediction Models**: We will develop and validate machine learning models to predict individual differences in cognitive control abilities based on multimodal neuroimaging features, with the goal of identifying potential biomarkers for early intervention.
+
+These analyses will be included in future progress reports as they are completed.
